--- a/empresas.html
+++ b/empresas.html
@@ -2,118 +2,167 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon" />
   <title>Nuestros Clientes</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/clientes.css" />
 </head>
 
 <body id="bodyy">
-
-  <body id="bodyy">
- 
-    <nav class="navbar navbar-expand-lg navbar-light fixed">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <img src="./img/logo/loguito.png" alt="" srcset="">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-            <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-            <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-            <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
-            <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
-            <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-
-  <section class="container">
-    <div class="row">
-      <div class="col-md-12 text-center" id="tituloo">
-        <h2 class="text-uppercase">Nuestros Clientes</h2>
-        <p>Trabajamos de su mano, entregándoles soluciones creativas en base a sus necesidades con los más altos estándares
-          de calidad y eficiencia para optimizar sus espacios</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="container galeriaa pt-4 pb-5">
-    <div class="row">
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/fravega.png" id="imgrevelde1" class="img-fluid" alt="fravega">
-      </div>
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/fallabella.png" id="imgrevelde2" class="img-fluid" alt="fallabella">
-      </div>
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas//gobierno.png" class="img-fluid" id="imgrevelde3" alt="gobierno">
-      </div>
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/dia.png" class="img-fluid" alt="dia">
-      </div>
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/banco.png" class="img-fluid" alt="banco">
-      </div>
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/vialidad.png" class="img-fluid" alt="vialidad">
-      </div>
-      </div>
-    <div class="row">
-      <div class="col-md-2 col-sm-12 pt-3">
-        <img src="./img/empresas/shell.png" id="imgrevelde4"  class="img-fluid" alt="shell">
-      </div>
-      <div class="col-md-2  col-sm-12 pt-3">
-        <img src="./img/empresas/kfc.png" class="img-fluid" alt="kfc">
-      </div>
-      <div class="col-md-2  col-sm-12 pt-3">
-        <img src="./img/empresas/jumbo.png" class="img-fluid" alt="jumbo">
-      </div>
-      <div class="col-md-2  col-sm-12 pt-3">
-        <img src="./img/empresas/burger.png" class="img-fluid" alt="burger">
-      </div>
-      <div class="col-md-2  col-sm-12 pt-3">
-        <img src="./img/empresas/vialidad2.png" class="img-fluid" alt="vialidad2">
-      </div>
-      <div class="col-md-2  col-sm-12 pt-3">
-        <img src="./img/empresas/good.png" class="img-fluid" alt="good">
-      </div>
-    </div>
-  </section>
-
-  <footer class="footer">
+  <nav class="navbar navbar-expand-md navbar-light fixed">
     <div class="container">
+      <a class="navbar-brand" href="./index.html">
+        <img src="./img/logo/loguito.png" alt="" srcset="" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./trabajos.html">Trabajos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./empresas.html">Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./nuestro.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./historial.html">Historial</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./formulario.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="container aleriaa pt-4">
+    <div class="row">
+      <div class="col-md-12 text-center title" id="tituloo">
+        <h2 class="text-uppercase">Nuestros Clientes</h2>
+        <p>
+          Trabajamos de su mano, entregándoles soluciones creativas en base a sus necesidades con los más altos
+          estándares de calidad y eficiencia para optimizar sus espacios
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="container galeriaa pt-2 pb-5">
+    <div class="row">
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/fravega.png" id="imgrevelde1" class="img-fluid" alt="fravega" />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img
+            src="./img/empresas/fallabella.png"
+            id="imgrevelde2"
+            class="img-fluid"
+            alt="fallabella"
+          />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img   src="./img/empresas//gobierno.png"
+        class="img-fluid"
+        id="imgrevelde3"
+        alt="gobierno"/>
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/dia.png" class="img-fluid" alt="dia" />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/banco.png" class="img-fluid" alt="banco" />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img
+        src="./img/empresas/vialidad.png"
+        class="img-fluid"
+        alt="vialidad"
+      />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img
+            src="./img/empresas/shell.png"
+            id="imgrevelde4"
+            class="img-fluid"
+            alt="shell"
+          />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/kfc.png" class="img-fluid" alt="kfc" />
+      </div>  
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/jumbo.png" class="img-fluid" alt="jumbo" />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/burger.png" class="img-fluid" alt="burger" />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img
+        src="./img/empresas/vialidad2.png"
+        class="img-fluid"
+        alt="vialidad2"
+      />
+      </div>
+      <div class="col-md-3 col-sm-12 pt-3">
+        <img src="./img/empresas/good.png" class="img-fluid" alt="good" />
+      </div>
+    
+    </div>
+  </section>
+
+  <footer class="footer mt-auto ">
+    <div class="container-fluid">
       <div class="row">
         <!-- Redes Sociales -->
         <div class="col-md-12 text-center">
-          <ul class="social-icons">
-            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
-            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
-            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
+          <ul class="social-icons list-inline">
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/">
+                <img src="./img/redes/faceboook.png" id="face" alt="Facebook" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/home?lang=es">
+                <img src="./img/redes/twitter.png" id="twitter" alt="Twitter" class="img-fluid" />
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/feed/">
+                <img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn" class="img-fluid" />
+              </a>
+            </li>
           </ul>
           <div class="container text-center mt-3">
             <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
           </div>
         </div>
       </div>
-  </footer>  
-  
-  
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    </div>
+  </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 
 </html>
