--- a/historial.html
+++ b/historial.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Historial</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/historial.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
 </head>
 
 <body id="bodyy">
-  
   <nav class="navbar navbar-expand-lg navbar-light fixed">
     <div class="container">
       <a class="navbar-brand" href="./index.html">
         <img src="./img/logo/loguito.png" alt="" srcset="">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
@@ -37,59 +37,64 @@
     </div>
   </nav>
 
+  <div class="container text-center mt-5 mb-5" id="tituloo">
+    <h2>CANTIDAD DE OBRAS</h2>
+    <p>Con determinación y visión, nuestra empresa se ha propuesto el desafío de alcanzar un número mínimo de
+      construcciones, trazando un camino hacia el éxito a través de la excelencia en cada proyecto que emprendemos.
+    </p>
 
-  <div class="container text-center mt-5 mb-5">
-    <h1 style="font-family: 'Noto Sans JP', sans-serif;">CANTIDAD DE OBRAS</h1>
-    <div>
-      
-    </div>
-    <h6 class="left-align mt-3" >Obras víales</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="10" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 10%; background-color: #FFA333;">10%</div>
+    <div class="progress-container">
+      <h6 id="izq">0</h6>
+      <h6 id="der">100</h6>
+      <h6 class="left-align mt-3">Casas</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="100">
+        <div class="progress-bar casas-progress" style="background-color: #FFA333; font-size: 15px;">100</div>
+      </div>
+
+      <h6 class="left-align mt-3">Edificios</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="100">
+        <div class="progress-bar edificios-progress" style="background-color: #FFA333; font-size: 15px;">100</div>
+      </div>
+
+      <h6 class="left-align mt-3">Escuelas</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="45">
+        <div class="progress-bar escuelas-progress" style="background-color: #FFA333; font-size: 15px;">45</div>
+      </div>
+
+      <h6 class="left-align mt-3">Hospitales</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="70">
+        <div class="progress-bar hospitales-progress" style="background-color: #FFA333; font-size: 15px;">70</div>
+      </div>
+
+      <h6 class="left-align mt-3">Hoteles</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="22">
+        <div class="progress-bar hoteles-progress"style="background-color: #FFA333; font-size: 15px;">22</div>
+      </div>
+
+      <h6 class="left-align mt-3">Puentes</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60">
+        <div class="progress-bar puentes-progress" style="background-color: #FFA333; font-size: 15px;">60</div>
+      </div>
     </div>
 
-    <h6 class="left-align mt-3">Casas</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="150" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 100%; background-color: #FFA333;">100%</div>
-    </div>
+    <div class="progress-container mt-5">
+      <h6 id="izq">0</h6>
+      <h6 id="der">60</h6>
 
-    <h6 class="left-align mt-3">Estadios deportivos</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="20" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 20%; background-color: #FFA333;">20%</div>
-    </div>
+      <h6 class="left-align mt-3">Obras víales</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="40">
+        <div class="progress-bar obras-viales-progress" style="background-color: #FFA333; font-size: 15px;">40</div>
+      </div>
 
-    <h6 class="left-align mt-3">Puentes</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 60%; background-color: #FFA333;">60%</div>
-    </div>
-    <h6 class="left-align mt-3">Edificios</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="185" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 100%; background-color: #FFA333;">100%</div>
-    </div>
-    <h6 class="left-align mt-3" >Escuelas</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="45" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 45%; background-color: #FFA333;">45%</div>
-    </div>
-    <h6 class="left-align mt-3">Hospitales</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="70" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 70%; background-color: #FFA333;">70%</div>
-    </div>
-    <h6 class="left-align mt-3">Plantas de energía</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="3" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 3%; background-color: #FFA333;">3%</div>
-    </div>
-    <h6 class="left-align mt-3">Hoteles</h6>
-    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="22" aria-valuemin="0"
-      aria-valuemax="100">
-      <div class="progress-bar" style="width: 22%; background-color: #FFA333;">22%</div>
+      <h6 class="left-align mt-3">Estadios deportivos</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60">
+        <div class="progress-bar estadios-deportivos-progress" style="background-color: #FFA333; font-size: 15px;">60</div>
+      </div>
+
+      <h6 class="left-align mt-3">Plantas de energía</h6>
+      <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="12">
+        <div class="progress-bar plantas-energia-progress" style="background-color: #FFA333; font-size: 15px;"">12</div>
+      </div>
     </div>
   </div>
 
@@ -109,14 +114,16 @@
         </div>
       </div>
   </footer>  
-  
-  
-  
+
 
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
