--- a/nuestro.html
+++ b/nuestro.html
@@ -1,126 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Servicios</title>
     <link rel="stylesheet" href="./css/servicios.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Noto+Sans+JP:wght@500&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
 </head>
+
 <body id="bodyy">
- 
-  <nav class="navbar navbar-expand-lg navbar-light fixed">
-    <div class="container">
-      <a class="navbar-brand" href="./index.html">
-        <img src="./img/logo/loguito.png" alt="" srcset="">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
-          <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
-          <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
-        </ul>
-      </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light fixed">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./img/logo/loguito.png" alt="" srcset="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse justify-content-end menucito collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./trabajos.html">Trabajos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./empresas.html">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./nuestro.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./preguntas.html">Preguntas Frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./historial.html">Historial</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./formulario.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container mt-5 mb-5" id="tituloo">
+        <h2 class="text-center text-uppercase title">SERVICIOS QUE OFRECEMOS</h2>
+        <p>Te presentamos los servicios profesionales que nuestros especialistas ofrecen a todo tipo de compañía.</p>
     </div>
-  </nav>
 
-    
-  <div class="container mt-5 mb-5" id="tituloo">
-    <h2 class="text-center text-uppercase title">SERVICIOS QUE OFRECEMOS</h2>
-    <p>Te presentamos los servicios profesionales que nuestros especialistas ofrecen a todo tipo de compañía.</p>
-  </div>
-
-  <div id="carouselExampleCaptions" class="carousel slide mt-5 mb-5">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+    <div id="carouselExampleCaptions" class="carousel slide mt-3 mb-5 pb-5">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./img/servicios/ARQUI.webp" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <h5>Arquitectos especializados</h5>
+                    <p>Combinando la experiencia de planificación, diseño, gestión y construcción.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/servicios/higiene y seguridad.jfif" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <h5>Higiene y seguridad</h5>
+                    <p>Protegemos la vida y el bienestar de los trabajadores.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/servicios/bariro.jpg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <h5>Construcciones</h5>
+                    <p>Nuestros servicios abarcan la construcción de nuevos proyectos.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/servicios/imagen2.jpeg" class="d-block w-100 img-fluid"  alt="...">
+                <div class="carousel-caption d-md-block">
+                    <h5>Instalaciones eléctricas</h5>
+                    <p>Realizamos instalaciones generales, mantenimiento para locales comerciales.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/servicios/imagen3.jpeg" class="d-block w-100 img-fluid" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <h4>Plomeria de alta calidad</h4>
+                    <p>Brindamos nuestros servicios con personas certificadas.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./img/servicios/ARQUI.webp"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;"  alt="...">
-        <div class="carousel-caption d-md-block">
-          <h5>Arquitectos especializados</h5>
-          <p>Combinando la experiencia de planificación, diseño, gestión y construcción.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/servicios/higiene y seguridad.jfif" class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-md-block">
-          <h5>Higiene y seguridad</h5>
-          <p>Protegemos la vida y el bienestar de los trabajadores.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/servicios/bariro.jpg"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-md-block">
-          <h5>Construcciones</h5>
-          <p>Nuestros servicios abarcan la construcción de nuevos proyectos.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/servicios/imagen2.jpeg"  class="d-block w-100 img-fluid"  style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-md-block">
-          <h5>Instalaciones eléctricas</h5>
-          <p>Realizamos instalaciones generales, mantenimiento para locales comerciales.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/servicios/imagen3.jpeg"  class="d-block w-100 img-fluid" style="object-fit: cover; max-height: 380px;" alt="...">
-        <div class="carousel-caption d-md-block">
-          <h4>Plomeria de alta calidad</h4>
-          <p>Brindamos nuestros servicios con personas certificadas.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <!-- Redes Sociales -->
-        <div class="col-md-12 text-center">
-          <ul class="social-icons">
-            <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png"  id="face" alt="Facebook"></a></li>
-            <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
-            <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
-          </ul>
-          <div class="container text-center mt-3">
-            <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
-          </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <!-- Redes Sociales -->
+                <div class="col-md-12 text-center">
+                    <ul class="social-icons">
+                        <li><a href="https://www.facebook.com/"><img src="./img/redes/faceboook.png" id="face" alt="Facebook"></a></li>
+                        <li><a href="https://twitter.com/home?lang=es"><img src="./img/redes/twitter.png" id="twitter" alt="twitter"></a></li>
+                        <li><a href="https://www.linkedin.com/feed/"><img src="./img/redes/linkedin.png" id="linkedin" alt="LinkedIn"></a></li>
+                    </ul>
+                    <div class="container text-center mt-3">
+                        <p>&copy; 2023 Todos los derechos reservados a Cadus.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-  </footer>  
-  
+    </footer>
 
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
