--- a/trabajos.html
+++ b/trabajos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="./css/style.css">
   <title>Trabajos</title>
+  <link rel="stylesheet" href="./css/trabajos.css">
   <!-- Enlace a Bootstrap CSS -->
   <link rel="shortcut icon" href="./img/logo/loguito.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
